Make sure quote content stretches

--- a/components/Quote/Quote.module.scss
+++ b/components/Quote/Quote.module.scss
@@ -33,5 +33,6 @@
 .content {
     @include paragraph;
 
+    flex: 1;
     color: $color-base-700;
 }
